[package]
name = "upaste"
version = "0.2.4"
authors = ["James Kominick <james.kominick@gmail.com>"]
description = "Simple cli pasting client for paste.rs, hastebin, or any general pasting service"
repository = "https://github.com/jaemk/upaste"
readme = "README.md"
keywords = ["paste", "haste", "hastebin", "pastebin"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = "2.23"
reqwest = "0.5"
error-chain = "0.10"
serde_json = "0.9"
itertools = "0.6"
