[package]
name = "upaste"
version = "0.2.7"
authors = ["James Kominick <james.kominick@gmail.com>"]
description = "Simple cli pasting client for paste.rs, hastebin, or any general pasting service"
repository = "https://github.com/jaemk/upaste"
readme = "README.md"
keywords = ["paste", "haste", "hastebin", "pastebin"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
license = "MIT"

[dependencies]
clap = "2"
reqwest = "0.8"
url = "1"
error-chain = "0.11"
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.7"
